# cue-python

./: .env.example  .env.test  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/scripts/: run.sh  test.sh
backend/src/app/: websocket_manager.py
backend/tests/: test_main.py
backend/tests/unit/: test_access_token.py  test_websocket_chat.py  test_websocket_connection.py
docs/: README.md  architecture_overview.md
docs/design/: agent_improvement_review.md
docs/proposals/: testing_strategy.md
docs/system_evolution/: 2025_01_self_improvement_tracker.md
environment/: container.py
evals/tool_use/: README.md  run_evals.sh
examples/: basic.py  claude_code_cue_example.py  claude_code_simple.py  streaming_with_tools.py  tool_output_formatting.py
runner/cue_runner/: config.py  process_manager.py
scripts/: analyze_token_usage.sh  build-cue.sh  determine-version.sh  format.sh  lint.sh  run.sh  run_evals.sh  setup.sh  test.sh
scripts/git-hooks/: README.md  commit-msg  install.sh  pre-commit
src/cue/: __init__.py  _agent.py  _agent_loop.py  _agent_manager.py  _agent_provider.py  _agent_state_machine.py  _agent_state_manager.py  _agent_summarizer.py  _client.py  _session_context.py  config.py  system_message_builder.py
src/cue/agent/: __init__.py  agent_loop_state.py  agent_manager_state.py  agent_state.py
src/cue/automation/: interaction_optimizer.py  meta_learner.py  query_handler.py  response_optimizer.py
src/cue/cli/: _cli_async.py  _cli_command.py
src/cue/cognition/: meta_solver.py
src/cue/tools/: base.py  (+24 more)
tests/: conftest.py  test_dynamic_context_manager.py  test_pattern_coordinator.py  test_pattern_learner.py  test_project_context_manager.py  test_system_context_manager.py
tests/context/: test_config.py  test_token_manager.py
tests/evaluation/: test_browse.py
tests/integration/: test_memory_integration.py  test_message_integration.py
tests/mocks/: mock_http_transport.py  mock_task_server.py  task_server.py
tests/unit/: test_agent.py  test_agent_loop.py  test_agent_loop_state.py  test_agent_manager.py  test_agent_manager_state.py  test_agent_registration.py  test_agent_state.py  test_agent_state_manager.py  test_agent_summarizer.py  test_anthropic_client.py  test_assistant_client.py  test_assistant_communication.py  test_automation_client.py  test_broadcast_message.py  test_context_manager.py  test_conversation_client.py  test_memory_client.py  test_message_client.py  test_message_param.py  test_message_params_anthropic.py  test_message_params_openai.py  test_message_params_utils.py  test_prompt_caching.py  test_task_context_manager.py  test_tool_output_formatter.py  test_v2_agent_runner.py  test_v2_integration.py  test_v2_model_provider.py  test_v2_session.py  test_v2_streaming_events.py  test_v2_tool_executor.py  test_v2_types.py
(+127 files in other folders)
